# esoteric

./: .gitignore  README.md  brainf.c
biiti/: CHANGELOG.md  LICENSE  README.md  biiti.cabal
biiti/app/: Interpreter.hs  Main.hs  Parser.hs  Transpiler.hs  Variable.hs
biiti/examples/biiti/: counter.biiti  hello_world.biiti  truth_machine.biiti
biiti/examples/sane/: counter.sane  hello_world.sane  truth_machine.sane
brainf/: CMakeLists.txt  README.md  brainf.c
brainf/examples/: alphabetReverse.bf  truthmachine.bf
examples/: helloworld.bf
torth/: CMakeLists.txt  README.md
torth/examples/: 99_bottles_of_beer.tth  factorial.tth  fibonacci.tth  fizzbuzz.tth  forever.tth  look_and_say.tth  truth_machine.tth  vigenere.tth
torth/include/: Common.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp  Statement.hpp  Token.hpp  TokenType.hpp  Util.hpp
torth/olus2000/: 99_bottles_of_beer.olus2000  look_and_say.olus2000  olus2000.olus2000  olus2000_to_torth.py
torth/src/: Interpreter.cpp  Lexer.cpp  Parser.cpp  Statement.cpp  Token.cpp  Util.cpp  main.cpp
